--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NodeImage WebDAV 同步 (浏览器版)</title>
     <link rel="stylesheet" href="style.css">
-    <!-- 引入 webdav-client 库 -->
-    <script src="https://unpkg.com/webdav@5.3.0/dist/webdav.min.js"></script>
+    <!-- 引入 webdav-client 库，并使用 defer 属性 -->
+    <script src="https://unpkg.com/webdav@5.3.0/dist/webdav.min.js" defer></script>
+    <!-- 引入我们自己的脚本，并使用 defer 属性确保执行顺序 -->
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -57,6 +59,5 @@
             <pre id="logs"></pre>
         </div>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
