--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NodeImage WebDAV 同步 (浏览器版)</title>
     <link rel="stylesheet" href="style.css">
-    <!-- 引入 webdav-client 库，并使用 defer 属性 -->
-    <script src="https://unpkg.com/webdav@5.3.0/dist/webdav.min.js" defer></script>
-    <!-- 引入我们自己的脚本，并使用 defer 属性确保执行顺序 -->
+    <!-- 引入 tsdav 库 -->
+    <script src="https://cdn.jsdelivr.net/npm/tsdav@1.1.6/dist/index.js" defer></script>
+    <!-- 引入我们自己的脚本 -->
     <script src="script.js" defer></script>
 </head>
 <body>
