--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,8 @@
                 </div>
                 <div class="form-group">
                     <label for="githubPat">GitHub Personal Access Token</label>
-                    <input type="password" id="githubPat" placeholder="需要 'workflow' 权限的 PAT" autocomplete="current-password">
-                    <small>需要 <code>workflow</code> 权限。 <a href="https://github.com/settings/tokens/new?scopes=workflow" target="_blank">点此创建</a></small>
+                    <input type="password" id="githubPat" placeholder="需要 'repo' 权限的 PAT" autocomplete="current-password">
+                    <small>需要 <code>repo</code> (完全控制私有仓库) 权限才能触发工作流。 <a href="https://github.com/settings/tokens/new?scopes=repo" target="_blank">点此创建</a></small>
                 </div>
                  <div class="form-group">
                     <label for="githubBranch">目标分支</label>
