--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
             <p>请在您的 GitHub 仓库的 <code>Settings > Secrets and variables > Actions</code> 页面中，添加以下 Secrets：</p>
             <ul>
                 <li><b>必需:</b> <code>NODEIMAGE_COOKIE</code>, <code>WEBDAV_USERNAME</code>, <code>WEBDAV_PASSWORD</code>, <code>WEBDAV_BASE_PATH</code></li>
-                <li><b>可选 (有默认值):</b> <code>NODEIMAGE_API_URL</code>, <code>WEBDAV_URL</code>, <code>HTTP_PROXY_URL</code></li>
+                <li><b>可选 (有默认值):</b> <code>NODEIMAGE_API_URL</code>, <code>WEBDAV_URL</code></li>
             </ul>
         </div>
 
